--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,14 @@
 }
 .first-row{
     background-color: rgb(26,188,156);
+    height: 400px;
 }
+.first-col{
+    background-color: blueviolet;
+    height: 80%;
+}
+.white{
+    background-color: white;
+    height: 1200px;
+}
+.black
