--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,11 @@
 }
 .white{
     background-color: white;
-    height: 1200px;
+    height: 1500px;
 }
 .black{
     background-color: black;
-    height: calc(100% / 6 - 20px);
+    height: 100px;
 }
 .second-row{
     background-color: rgb(26,188,156);
@@ -48,5 +48,8 @@
 }
 /*fine main*/
 /*inizio footer*/
-
+.darkslaghtergray{
+    background-color: rgb(58,84,109);
+    height: 300px;
+}
 /*fine footer*/
