[FEAT] test inserimento contenuto 6 colonne main

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ img{
 }
 /*fine jumbotron*/
 
+/*inizio sezione 6 colonne*/
+
+/*fine sezzione 6 colonne*/
+
 /*fine main*/
 
 /*inizio footer*/
