--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,38 @@ img{
 /*fine jumbotron*/
 
 /*inizio sezione 6 colonne*/
+.img-container-portofolio{
+    width: 100%;
+    margin: 10px;
+    border-radius: round;
+}
 
+.img-container-portofolio > img{
+    border-radius: 10px;
+}
+
+.col-12-content > h4{
+    margin: 30px 0px;
+    font-weight: 600;
+}
 /*fine sezzione 6 colonne*/
+
+/*inizio sezione about*/
+.about-us{
+    text-align: left;
+}
+
+.btn-download{
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid #fff;
+    margin: 25px;
+}
+/*fine sezione about*/
+
+/*inizio sezione contatc me*/
+
+/*fine sezione contact me*/
 
 /*fine main*/
 
